<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/black"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="392dp">

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/contact_name"
                android:ems="10"
                android:hint="@string/contact_name"
                android:inputType="none"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="300dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2"
            tools:layout_conversion_absoluteHeight="51dp"
            tools:layout_conversion_absoluteWidth="392dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/contact_name"
                android:ems="10"
                android:hint="@string/contact_phone"
                android:inputType="phone"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                tools:layout_conversion_absoluteHeight="50dp"
                tools:layout_conversion_absoluteWidth="300dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="1dp">


        <Button
            android:id="@+id/addButton"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:text="@string/add_string"
            android:textColor="@color/white"
            app:iconTint="#673AB7"
            app:layout_constraintBottom_toBottomOf="@+id/findButton"
            app:layout_constraintEnd_toStartOf="@+id/findButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/findButton" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:text="@string/find_string"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ASCButton"
            app:layout_constraintEnd_toStartOf="@+id/ASCButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addButton"
            app:layout_constraintTop_toTopOf="@+id/ASCButton" />

        <Button
            android:id="@+id/ASCButton"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:foregroundTint="@color/black"
            android:text="@string/ASC_string"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/DESCButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/findButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/DESCButton"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:foregroundTint="@color/black"
            android:text="@string/Desc_string"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ASCButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ASCButton"
            app:layout_constraintTop_toTopOf="@+id/ASCButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>